[package]
name = "conllx-utils"
version = "0.2.1"
authors = ["Daniël de Kok <me@danieldk.eu>"]

[dependencies]
conllx = "0.8"
colored = "1.4"
flate2 = "0.2"
itertools = "0.6"
lazy_static = "0.2"
maplit = "0.1"
petgraph = "0.4"
getopts = "0.2"
reservoir = "0.2"
rand = "0.3"
regex = "0.2"
stdinout = "0.4"
unicode-normalization = "0.1"

[dev-dependencies]
pretty_assertions = "0.3"